[package]
name = "ncq"
authors = ["Leonid Krashanoff <leo@krashanoff.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
rustls = "0.20"
s2n-quic = { version = "1", features = ["provider-tls-rustls"] }

clap = { version = "3", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
